--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,27 @@
       <version>2.1</version>
       <scope>provided</scope>
     </dependency>
-
-
   </dependencies>
+
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+          <includes>
+          <include>**/*.xml</include>
+          </includes>
+      <filtering>false</filtering>
+      </resource>
+
+      <resource>
+        <directory>src/main/resources</directory>
+          <includes>
+            <include>**/*.xml</include>
+            <include>**/*.properties</include>
+          </includes>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
+  </build>
 
 </project>
